--- a/EDA_on_Airbnb_2019_Dataset.ipynb
+++ b/EDA_on_Airbnb_2019_Dataset.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "_uIu4lPJB6gZ"
       },
@@ -75,7 +75,7 @@
         "id": "uL8MEwhZCqJU",
         "outputId": "f16c3823-4094-4f5b-d9f3-9fbefb16ab37"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +240,7 @@
         "id": "Fg1Djkp0CwYW",
         "outputId": "de30d539-79d8-4c4c-ca51-2497569597ab"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "Lw2VdNVKDiJD"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +283,7 @@
         "id": "UWFys4yrD-4e",
         "outputId": "b25db39c-9276-4f45-ac96-c60c6ad22fa3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +692,7 @@
         "id": "sZUXceoYFNaB",
         "outputId": "d5ac2c65-c628-446e-8c4c-a78174b12caa"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -747,7 +747,7 @@
         "id": "ypkidjkuFa3k",
         "outputId": "21a8a466-3d55-4114-d7aa-a1f5048c6d8e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1020,7 +1020,7 @@
         "id": "aiVE3sIhFqZV",
         "outputId": "71bf0bbd-1470-45f4-f38e-fd06acf7678b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1090,7 +1090,7 @@
       "metadata": {
         "id": "D6coOZDtF_Ug"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1105,7 +1105,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1143,7 +1143,7 @@
         "id": "GK_ghXMjGaOD",
         "outputId": "fd23ff1a-7037-49af-a00b-72ab9d699e39"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,7 +1500,7 @@
           "height": 422
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1549,7 +1549,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1577,7 +1577,7 @@
       "metadata": {
         "id": "5Aiq8t8U-hm6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1596,7 +1596,7 @@
           "height": 866
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1626,7 +1626,7 @@
           "height": 501
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1664,7 +1664,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1703,7 +1703,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1742,7 +1742,7 @@
           "height": 518
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1796,7 +1796,7 @@
           "height": 670
         }
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1874,7 +1874,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1912,7 +1912,7 @@
           "height": 406
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2158,7 +2158,7 @@
           "height": 206
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2347,7 +2347,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2396,7 +2396,7 @@
         "id": "F4iDvf-OGd2m",
         "outputId": "600c7148-d903-4d3b-e6a9-e0df620bd6fc"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3651,7 +3651,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "things pending"
       ],
       "metadata": {
         "id": "WME0EZVJcgAc"
